RESOLVED FIXED106422
INPUT_MULTIPLE_FIELDS_UI: min/max attributes should not make all fields read-only
https://bugs.webkit.org/show_bug.cgi?id=106422
Summary INPUT_MULTIPLE_FIELDS_UI: min/max attributes should not make all fields read-...
Kunihiko Sakamoto
Reported 2013-01-08 23:59:07 PST
Currently, multiple fields ui for input type=date and type=month makes some fields read-only when possible value is limited by min/max attributes. However, we should not make all the fields read-only even if min and max is the same. For example, initial value of <input type="date" min="2013-01-09" max="2013-01-09"> is empty, but UI shows 2013-01-09 and user cannot change its value because all the fields are read-only. User should be able to set/clear value from UI in such case.
Attachments
Patch (10.86 KB, patch)
2013-01-09 00:42 PST, Kunihiko Sakamoto
no flags
Kunihiko Sakamoto
Comment 1 2013-01-09 00:42:33 PST
Kent Tamura
Comment 2 2013-01-09 00:45:36 PST
Comment on attachment 181869 [details] Patch ok
WebKit Review Bot
Comment 3 2013-01-09 01:23:27 PST
Comment on attachment 181869 [details] Patch Clearing flags on attachment: 181869 Committed r139174: <http://trac.webkit.org/changeset/139174>
WebKit Review Bot
Comment 4 2013-01-09 01:23:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.