INPUT_MULTIPLE_FIELDS_UI: min/max attributes should not make all fields read-only https://bugs.webkit.org/show_bug.cgi?id=106422

Patch by Kunihiko Sakamoto <ksakamoto@chromium.org> on 2013-01-09
Reviewed by Kent Tamura.

Source/WebCore:

Do not make day-field of date input and month-field of month input readonly
even if min and max are the same.

Tests: fast/forms/date-multiple-fields/date-multiple-fields-readonly-subfield.html
       fast/forms/month-multiple-fields/month-multiple-fields-readonly-subfield.html

* html/shadow/DateTimeEditElement.cpp:
(WebCore::DateTimeEditBuilder::visitField): Added check for date type.

LayoutTests:

* fast/forms/date-multiple-fields/date-multiple-fields-readonly-subfield-expected.txt:
* fast/forms/date-multiple-fields/date-multiple-fields-readonly-subfield.html: Update expectations.
* fast/forms/month-multiple-fields/month-multiple-fields-readonly-subfield-expected.txt:
* fast/forms/month-multiple-fields/month-multiple-fields-readonly-subfield.html: Ditto.

git-svn-id: svn://svn.chromium.org/blink/trunk@139174 bbb929c8-8fbe-4397-9dbb-9b2b20218538